--- a/index.html
+++ b/index.html
@@ -38,6 +38,44 @@
         </section>
         <!-- ending Hero section -->
 
+        <!-- starting Explore Menu section -->
+        <section class="explore-menu-container">
+            <h1 class="explore-menu-text">Explore Our Menu</h1>
+            <div class="explore-menu-lists">
+                <!-- Berger -->
+                <div class="explore-menu-card">
+                    <img src="./media/burger.jpg" alt="berger" class="food-img">
+                    <div class="food-menu-card-discription">
+                        <h3 class="food-title">Berger</h3>
+                        <p class="food-restaurant"> Burger King, Mcdonalds, Burger Place <span style="color: red;">+3</span></p>
+                    </div>
+                </div>
+                <!-- Pizza -->
+                <div class="explore-menu-card">
+                    <img src="./media/pizza.jpg" alt="pizza" class="food-img">
+                    <div class="food-menu-card-discription">
+                        <h3 class="food-title">Berger</h3>
+                        <p class="food-restaurant"> Pizza Hut, Domino's Pizza <span style="color: red;">+3</span></p>
+                    </div>
+                </div>
+                <!--  -->
+
+                <!-- Ice-crem -->
+                <div class="explore-menu-card">
+                    <img src="./media/iceCream.jpg" alt="Ice-crem" class="food-img">
+                    <div class="food-menu-card-discription">
+                        <h3 class="food-title">Ice-crem</h3>
+                        <p class="food-restaurant">  Baskin Robins, Ibaco <span style="color: red;">+3</span></p>
+                    </div>
+                </div>
+                <!--  -->
+            </div>
+            <div class="explore-menu-viwe-more">
+                <button class="button-primary">Viwe More</button>
+            </div>
+        </section>
+        <!-- ending Explore Menu section -->
+
     </main>
     <!-- ending main -->
 </body>
