--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <!-- starting Explore Menu section -->
         <section class="explore-menu-container">
             <h1 class="explore-menu-text">Explore Our Menu</h1>
+            <div class="explore-menu-bg-rombas"></div>
             <div class="explore-menu-lists">
                 <!-- Berger -->
                 <div class="explore-menu-card">
@@ -51,7 +52,7 @@
                     </div>
                 </div>
                 <!-- Pizza -->
-                <div class="explore-menu-card">
+                <div class="explore-menu-card" id="pizza-card">
                     <img src="./media/pizza.jpg" alt="pizza" class="food-img">
                     <div class="food-menu-card-discription">
                         <h3 class="food-title">Berger</h3>
@@ -71,7 +72,7 @@
                 <!--  -->
             </div>
             <div class="explore-menu-viwe-more">
-                <button class="button-primary">Viwe More</button>
+                <button class="button-primary">View More</button>
             </div>
         </section>
         <!-- ending Explore Menu section -->
