--- a/index.html
+++ b/index.html
@@ -77,6 +77,29 @@
         </section>
         <!-- ending Explore Menu section -->
 
+        <!-- starting Restaurant section -->
+        <section class="restaurants-container">
+            <h1 class="restaurants-discription">Order from 100s of Restaurants</h1>
+            <div class="restaurants-grid">
+                <div class="restaurants-grid-row-one">
+                    <div class="restaurant-1">
+                        <img class="restaurant-1-img" src="./media/restaurant1.jpg" alt="restaurant1">
+                    </div>
+                    <div class="restaurant-2">
+                        <img class="restaurant-2-img" src="./media/restaurant2.jpg" alt="restaurant2">
+                    </div>
+                </div>
+                <div class="restaurants-grid-row-two">
+                    <div class="restaurant-3">
+                        <img class="restaurant-3-img" src="./media/restaurant3.jpg"     alt="restaurant3">
+                    </div>
+                    <div class="restaurant-4">
+                        <img class="restaurant-4-img" src="./media/restaurant4.jpg" alt="restaurant4">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- starting Restaurant section -->
     </main>
     <!-- ending main -->
 </body>
