change made by anjali

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <!-- starting Explore Menu section -->
         <section class="explore-menu-container">
             <h1 class="explore-menu-text">Explore Our Menu</h1>
+            <h1 class="explore-menu-text">Anjali</h1>
+
+            
             <div class="explore-menu-bg-rombas"></div>
             <div class="explore-menu-lists">
                 <!-- Berger -->
